--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -41,7 +41,7 @@
   &-btns {
     .add-to-cart-btn {
       margin-right: 28px;
-      color: $clr-pine-green;
+      color: $clr-white;
       .btn-ico {
         margin-right: 10px;
       }
@@ -58,7 +58,7 @@
           justify-content: center;
           align-items: center;
           font-size: 14px;
-          color: $clr-black;
+          color: $clr-white;
           opacity: 0.8;
           font-weight: 500;
         }
