change product card

--- a/src/components/SingleCategory/SingleCategory.scss
+++ b/src/components/SingleCategory/SingleCategory.scss
@@ -17,8 +17,8 @@
 
       .product-item-cat {
         position: absolute;
-        bottom: 8px;
-        left: 8px;
+        top: 8px;
+        right: 8px;
         border-radius: 8px;
         padding-right: 8px;
         padding-left: 8px;
