--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -2,6 +2,7 @@
 
 .category-items {
   row-gap: 20px;
+  background-color: #b0b0ae;
   .category-item {
     &-img {
       border-radius: 10px;
@@ -18,18 +19,26 @@
   }
 
   .category-item {
+    &1{
+      position:relative;
+    }
     &-img1 {
-      border-radius: 100%;
       overflow: hidden;
       height: 240px;
-      mix-blend-mode:darken;
       @media screen and (max-width: 1200px) {
         height: auto;
       }
     }
 
     &-name1 {
-      padding: 12px 0;
+      
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      border-radius: 8px;
+      padding-right: 8px;
+      padding-left: 8px;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
   }
 
