--- a/src/components/SingleCategory/SingleCategory.scss
+++ b/src/components/SingleCategory/SingleCategory.scss
@@ -4,26 +4,26 @@
   row-gap: 20px;
   .product-item {
     box-shadow: rgba(99, 99, 99, 0.05) 0px 2px 8px 0px;
-    padding: 18px;
-    border-radius: 4px;
+    /* padding: 18px; */
+    border-radius: 10px;
+    overflow: hidden;
     cursor: pointer;
-
-    &-body {
-      padding: 12px 0;
-    }
 
     &-img {
       position: relative;
 
       .product-item-cat {
         position: absolute;
-        top: 8px;
-        right: 8px;
+        bottom: -84px;
+        right: 10px;
         border-radius: 8px;
         padding-right: 8px;
         padding-left: 8px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       }
+    }
+    &-body{
+      padding: 15px;
     }
 
     &-title {
